# SystemC

./: README.md
Completed_Task/Dummy/: Dummy  Dummy5  dummy4
Completed_Task/ExamQ/: CMakeLists.txt  and.cpp  and.h  main.cpp  mon.h  or.cpp  stim.h
Completed_Task/Prep/: CMakeLists.txt  main.cpp  mon.h  stim.h
Completed_Task/SCVP.Exercise2/: exor.h  exor_main.cpp  mon.h  nand.h  stim.h
Completed_Task/SCVP.Exercise3/: state_machine.cpp  state_machine.h  stimuli.h
Completed_Task/SCVP.Exercise4/: main.cpp  place.h  subnet.h  transition.h
Completed_Task/SCVP.Exercise5/: CMakeLists.txt  kpn.cpp  kpn.h  main.cpp
Completed_Task/SCVP.Exercise6/: bus.h  main.cpp  memory.h  processor.h
Completed_Task/SCVP.Exercise8/: main.cpp
Completed_Task/Trial/: CMakeLists.txt  mon.h  stim.h  trail.cpp
Completed_Task/XOR/: CMakeLists.txt  mon.h  stim.h  xor.cpp
SCVP.artifacts/: CMakeLists.txt
SCVP.artifacts/custom_tlm/: main.cpp
SCVP.artifacts/delta_delay/: delta_delay.cpp
SCVP.artifacts/fifo_example/: producer.h
SCVP.artifacts/mutex_example/: main.cpp
SCVP.artifacts/nand_exercise2/: CMakeLists.txt  main.cpp
SCVP.artifacts/tlm_at_1/: initiator.h  target.h
SCVP.artifacts/tlm_at_2/: main.cpp
SCVP.artifacts/tlm_at_backpressure/: target.h
SCVP.artifacts/tlm_memory_manager/: memory_manager.h
SCVP.artifacts/tlm_protocol_checker/: main.cpp
SCVP.artifacts/tlm_simple_sockets/: main.cpp
